# AgentCAP

./: .gitattributes  .gitignore  .gitmodules  EXPERIMENT_START_GUIDE.md  README.md  SELFHOST_GUIDE.md  analyze_results.py  pyproject.toml  readabilipy2u3d41rh  readabilipy46o_yfmv  readabilipy4omq037x  readabilipy74nfptbi  readabilipyblvyzyif  readabilipydz2250ir  readabilipyf9rma8jq  readabilipyjtgqfz8h  readabilipyr6klb7im  readabilipyrtslw5yd  requirements.txt  run_imo_answerbench_amd_nohup.sh  run_imo_answerbench_amd_sglang_docker.sh  run_imo_answerbench_amd_vllm_nohup.sh  setup.py
agent_cap/: __init__.py  __main__.py  benchmarks.py  cli.py  combinations.py  evaluator.py  requirements_imoanswerbench.txt  requirements_imoanswerbench_sglang.txt  requirements_imoanswerbench_vllm.txt  run_imo-answerbench_deepseek32_sglang.py  run_imo_answerbench.py  run_imo_answerbench_2.py  run_imo_answerbench_4.py  run_imo_answerbench_5.py  run_imo_answerbench_deepseek32_vllm.py
benchmarks/: swe_bench_lite_curated_100.json
configs/: README.md  agents_demo.yaml  agents_imo_gptoss_sglang.yaml  agents_local.yaml  agents_pool.yaml  agents_pool_swarm.yaml  agents_shared.yaml  agents_swarm.yaml  hybrid_claude46_glm.yaml  hybrid_claude46_gpt54.yaml  hybrid_claude46_gptoss120b.yaml  hybrid_claude46_minimax.yaml  hybrid_claude46_qwen35_27b.yaml  hybrid_claude46_self.yaml  hybrid_glm_claude46.yaml  hybrid_glm_gpt54.yaml  hybrid_glm_gptoss120b.yaml  hybrid_glm_gptoss120b_imo.yaml  hybrid_glm_minimax.yaml  hybrid_glm_qwen35_27b.yaml  hybrid_glm_qwen35_27b_imo.yaml  hybrid_glm_self.yaml  hybrid_glm_self_imo.yaml  hybrid_gpt54_claude46.yaml  hybrid_gpt54_glm.yaml  hybrid_gpt54_gptoss120b.yaml  hybrid_gpt54_gptoss120b_imo.yaml  hybrid_gpt54_kimi.yaml  hybrid_gpt54_minimax.yaml  hybrid_gpt54_qwen32b.yaml  hybrid_gpt54_qwen35_27b.yaml  hybrid_gpt54_qwen35_27b_imo.yaml  hybrid_gpt54_qwen35_9b.yaml  hybrid_gpt54_qwen35_moe.yaml  hybrid_gpt54_qwen4b.yaml  hybrid_gpt54_self.yaml  hybrid_gpt54_self_imo.yaml  hybrid_kimi_gpt54.yaml  hybrid_kimi_minimax.yaml  hybrid_kimi_self.yaml  (+31 more)
docs/: ANALYSIS.md  AgentCAP_Presentation.pptx  AgentCAP_Results.xlsx  BUDGET_AND_EXPERIMENT_PLAN.md  EXPERIMENT_PLAN.md  EXPERIMENT_PLAN.md.v3.bak  EXPERIMENT_PLAN_v5.md  FINDINGS.md  RESEARCH_PLAN.md  RUN_NO_DOCKER.md  agentcap_results.xlsx  datasets.md  generate_presentation.py  introduction.bak0  introduction.bak1  introduction.bak2  introduction.bak3  introduction.bak4  mcp-server.md  progress_update.html  results_full_matrix.xlsx
examples/: rag_agent.py  simple_agent.py
k8s/: eval-job.yaml  eval_k8s.py  eval_patches.py  eval_patches_k8s.py  eval_sidecar_manager.py  gen_swebench_jobs.py  mcp-atlas-a100.yaml  mcp-atlas-h200.yaml  mcp-atlas-sidecar.yaml  mcp-atlas-smoke-test.yaml  orchestrator-job.yaml  reeval_swebench.py  run_parallel.py  run_sweagent.py  run_sweagent_batch.py  run_sweagent_k8s.py  run_swebench_batch.py  sglang-service-a100.yaml  sglang-service-h100.yaml  sglang-service-h200.yaml  sidecar_manager.py  submit_batch.sh  sweagent_config.yaml  swebench-smoke-test.yaml  vllm-gsm8k-chatapi-hashhash-a100.yaml  vllm-service-a100.yaml  vllm-service-h200.yaml  vllm-service.yaml
mcp-server/: pyproject.toml  start.sh
results/: agreed_mcpatlas_all.jsonl  agreed_mcpatlas_execute_heavy.jsonl  agreed_mcpatlas_plan_heavy.jsonl  agreed_swebench_all.jsonl  agreed_swebench_execute_heavy.jsonl  agreed_swebench_plan_heavy.jsonl  mcpatlas_domain_classifications.jsonl  swebench_classifications_gpt54.jsonl  swebench_classifications_qwen.jsonl  swebench_classifications_v3_qwen.jsonl  swebench_pro_tasks.jsonl  task_classifications_claude_review.jsonl  task_classifications_final_mcpatlas.jsonl  task_classifications_final_swebench.jsonl  task_classifications_for_review.jsonl  task_classifications_gpt54_review.jsonl  task_classifications_heuristic.jsonl  task_classifications_kimi_review_mcpatlas.jsonl  (+4 more)
(+205 files in other folders)
