[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-cap"
version = "0.2.0"
description = "Benchmarking of Cost, Accuracy, and Performance for Agentic AI Systems"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0",
    "httpx>=0.25",
    "aiohttp>=3.9",
    "datasets>=2.0",
    "openai-harmony>=0.0.4",
    "tiktoken>=0.7",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
imo = [
    "jupyter_client>=8.0",
    "ipykernel>=6.0",
    "math-verify>=0.7",
    "sympy>=1.12",
]
swebench = [
    "swebench>=2.0",
    "docker>=7.0",
    "boto3>=1.34",
]
viz = ["plotly>=5.0.0"]
cuda = ["torch>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
all = [
    "agent-cap[imo,swebench,viz]",
]

[project.scripts]
agent-cap = "agent_cap.cli:main"

[tool.setuptools.packages.find]
include = ["agent_cap*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
