[project]
name = "agentcap-mcp-server"
version = "0.1.0"
description = "MCP tool server for AgentCAP experiments (wraps mcp-atlas agent-environment)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==2.10.6",
    "mcp[cli]==1.12.1",
    "pydantic==2.11.7",
    "fastapi==0.115.12",
    "uvicorn==0.34.3",
    "cacheout>=0.16.0",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.0",
]

[tool.uv]
# Pin exact versions for reproducibility
resolution = "lowest-direct"
